Add bot advertisement link